--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "lazysizes": "^4.1.1",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
-    "qrcode": "^1.3.2"
+    "qrcode": "^1.3.2",
+    "v-click-outside": "^2.1.3"
   },
   "scripts": {
     "start": "slate-tools start",
