--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
     "qrcode": "^1.3.2",
-    "v-click-outside": "^2.1.3"
+    "v-click-outside": "^2.1.3",
+    "vue-awesome-swiper": "^3.1.3"
   },
   "scripts": {
     "start": "slate-tools start",
