--- a/src/config/settings_data.json
+++ b/src/config/settings_data.json
@@ -372,6 +372,36 @@
           "text_color": "#ffffff",
           "background_color": "#36807c"
         }
+      },
+      "compare-banner": {
+        "type": "compare-banner",
+        "blocks": {
+          "1558512239422": {
+            "type": "image",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/Xpand_Navigation_Flat-Laces3.png",
+              "heading": "Original No-Tie Lacing System",
+              "button_label": "SHOP NOW",
+              "button_url": "shopify:\/\/products\/no-tie-original-elastic-lacing-system"
+            }
+          },
+          "1558512320897": {
+            "type": "image",
+            "settings": {
+              "image": "shopify:\/\/shop_images\/Xpand_Navigation_Round_Laces-1_500x_c0668201-8e9b-4568-a40f-4b323c42f3c4.png",
+              "heading": "Quick-Release Lacing System",
+              "button_label": "Shop Now",
+              "button_url": "shopify:\/\/products\/quick-release-round-lacing-system"
+            }
+          }
+        },
+        "block_order": [
+          "1558512239422",
+          "1558512320897"
+        ],
+        "settings": {
+          "heading": "Meet the Laces"
+        }
       }
     },
     "content_for_index": [
