--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@shopify/slate-tools": "1.0.0-beta.15",
     "babel-preset-shopify": "^16.2.0",
     "eslint-plugin-shopify": "^19.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "stylelint-config-prettier": "^3.0.4",
-    "stylelint-config-shopify": "^5.0.0"
+    "stylelint-config-shopify": "^5.0.0",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@shopify/theme-a11y": "^2.0.1",
@@ -34,11 +38,12 @@
     "@shopify/theme-variants": "^1.0.0-alpha.8",
     "bulma": "^0.7.4",
     "jquery": "^3.2.1",
-    "lazysizes": "^4.1.1",
+    "lazysizes": "^4.1.8",
     "lodash-es": "^4.17.4",
     "normalize.css": "^7.0.0",
     "qrcode": "^1.3.2",
     "v-click-outside": "^2.1.3",
+    "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-scrollto": "^2.15.0"
   },
