--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "url": "https://github.com/Shopify/starter-theme.git"
   },
   "devDependencies": {
-    "@shopify/slate-tools": "1.0.0-beta.15",
+    "@shopify/slate-tools": "^1.0.0-beta.18",
     "babel-preset-shopify": "^16.2.0",
     "eslint-plugin-shopify": "^19.0.0",
     "mini-css-extract-plugin": "^0.7.0",
