Chore: update settings_data.json

--- a/src/config/settings_data.json
+++ b/src/config/settings_data.json
@@ -10,10 +10,10 @@
     "share_facebook": true,
     "share_twitter": true,
     "share_pinterest": true,
-    "social_twitter_link": "",
-    "social_facebook_link": "",
+    "social_twitter_link": "https:\/\/twitter.com\/xpandlaces",
+    "social_facebook_link": "https:\/\/www.facebook.com\/Xpandlaces\/",
     "social_pinterest_link": "",
-    "social_instagram_link": "",
+    "social_instagram_link": "https:\/\/www.instagram.com\/xpandlaces",
     "social_snapchat_link": "",
     "social_tumblr_link": "",
     "social_youtube_link": "",
